--- a/src/main/webapp/pages/subsidiary/forget.html
+++ b/src/main/webapp/pages/subsidiary/forget.html
@@ -34,7 +34,7 @@
                                         <label class="layui-form-label" th:text="#{forget.account}"></label>
                                         <div class="layui-input-block">
                                             <input type="text" th:placeholder="#{forget.fill}"
-                                                   class="layui-input account" lay-verify="phone"
+                                                   class="layui-input account" lay-verify="email"
                                                    required="required"
                                                    autocomplete="new-password"/>
                                         </div>
@@ -43,6 +43,7 @@
                                         <label class="layui-form-label" th:text="#{forget.set}"></label>
                                         <div class="layui-input-block">
                                             <input type="password" th:placeholder="#{forget.set_one}"
+                                                   name="password"
                                                    class="layui-input password_1" lay-verify="pass"
                                                    required="required"
                                                    autocomplete="new-password"/>
@@ -76,8 +77,9 @@
                                     <div class="layui-form-item">
                                         <label class="layui-form-label" th:text="#{forget.code}"></label>
                                         <div class="layui-input-block">
-                                            <input type="text" th:placeholder="#{login.code}" class="layui-input"
-                                                   lay-verify="number" required="required" autocomplete="new-password"/>
+                                            <input type="text" th:placeholder="#{login.code}" name="code"
+                                                   class="layui-input"
+                                                   required="required" autocomplete="new-password"/>
                                         </div>
                                     </div>
                                     <div class="layui-form-item">
@@ -86,7 +88,7 @@
                                                     th:text="#{forget.back}"></button>
                                             <button type="button" class="layui-btn layui-btn-normal getCode"
                                                     th:text="#{forget.getcode}"></button>
-                                            <button class="layui-btn" lay-submit lay-filter="formStep2"
+                                            <button class="layui-btn confirmBtn" lay-submit lay-filter="formStep2"
                                                     th:text="#{forget.confirm}"></button>
                                         </div>
                                     </div>
@@ -125,136 +127,147 @@
 <div th:fragment="js">
     <script th:src="@{/styles/lib/layui-v2.5.5/layui.js}" charset="utf-8"></script>
     <script th:src="@{/styles/js/lay-config.js?v=1.0.4}" charset="utf-8"></script>
+    <script th:src="@{/styles/lib/jquery-3.4.1/jquery-3.4.1.min.js}" charset="utf-8"></script>
+    <!--导入自定义的一些公共方法-->
+    <script th:src="@{/styles/js/my_function.js}"></script>
     <script type="text/javascript">
         //<![CDATA[
         layui.use(['form', 'step'], function () {
-            var $ = layui.$;
-            var form = layui.form;
-            var step = layui.step;
-            var btn_getCode = false;
-            var account = $("select option:selected").val();
-            var verify;
+                var $ = layui.$;
+                var form = layui.form;
+                var step = layui.step;
+                var btn_getCode = false;
+                var account = $("select option:selected").val();
+                var verify;
 
-            form.verify({
-                pass: [/^(?=.*[a-zA-Z])(?=.*\d)[^]{6,}$/, '[[#{forget.msgPasswordRules}]]']
-            })
+                form.verify({
+                    pass: [/^(?=.*[a-zA-Z])(?=.*\d)[^]{6,}$/, '[[#{forget.msgPasswordRules}]]']
+                })
 
-            //下拉列表的选中事件
-            $(".layui-anim-upbit dd").on('click', function () {
-                account = $(this).attr("lay-value");
-                if (account == 1) {
-                    verify = "phone";
-                } else {
-                    verify = "email";
-                }
-                $('.account').attr("lay-verify", verify);
-            });
-
-            step.render({
-                elem: '#stepForm',
-                filter: 'stepForm',
-                width: '100%', //设置容器宽度
-                stepWidth: '750px',
-                height: '500px',
-                stepItems: [{
-                    title: '[[#{forget.step_one}]]'
-                }, {
-                    title: '[[#{forget.getcode}]]'
-                }, {
-                    title: '[[#{forget.step_two}]]'
-                }]
-            });
-
-            form.on('submit(formStep)', function (data) {
-                if ($('.password_1').val() == $('.password_2').val()) {
-                    //赋值给获取验证码的账号
-                    $('.account_two').text($('.account').val());
-                    step.next('#stepForm');
-                } else {
-                    layer.msg("[[#{forget.msg_pass}]]");
-                }
-                return false;
-            });
-
-            form.on('submit(formStep2)', function (data) {
-                layer.msg("[[#{forget.codeMsg}]]")
-                //分布表单下一步
-                step.next('#stepForm');
-                return false;
-            });
-
-            $('.pre').click(function () {
-                //分布表单上一步
-                step.pre('#stepForm');
-            });
-
-            //获取验证码，一分钟内只能点击一次
-            $('.getCode').on('click', function () {
-                if (!btn_getCode) {
-                    btn_getCode = true;
-                    getcode($(this));
-                    ajax($('.account_two').text());
-                } else {
-                    return false;
-                }
-            })
-
-            $('.next').click(function () {
-                step.pre('#stepForm');
-            });
-
-            //前往登录
-            $('.land').click(function () {
-                window.location = 'login';
-            });
-
-            //点击事件
-            var getcode = function (date) {
-                //获取点击的对象
-                var obj = date;
-                //获取按钮的文本
-                var text = obj.text();
-                //给对象添加禁止点击
-                obj.addClass("layui-disabled");
-                var time = 59;
-                //定义一个每秒执行一次的事件
-                var timer = setInterval(function () {
-                    var temp = time--;
-                    //更改按钮的值
-                    obj.text(text + ' (' + temp + "S)");
-                    //判断是否已经结束了禁止点击的时间
-                    if (temp <= 0) {
-                        btn_getCode = false;
-                        //移除禁止点击的效果
-                        obj.removeClass("layui-disabled");
-                        //改回按钮的值
-                        obj.text(text);
-                        //清除每秒执行的一次的事件
-                        clearInterval(timer);
-                        return;
+                //下拉列表的选中事件
+                $(".layui-anim-upbit dd").on('click', function () {
+                    //判断元素是否为不可点击状态
+                    if($(this).prop("disabled") == true){
+                        account = $(this).attr("lay-value");
                     }
-                }, 1000);
-            }
-            //发送异步请求，获取验证码
-            var ajax = function (user) {
-                $.ajax({
-                    type: "GET",
-                    url: "getCode",
-                    dataType: "json", //预期服务器返回数据的类型
-                    data: {user: user},
-                    success: function (data) {
-                        if (data.success) {
-                            $("searchResult").html(data.msg);
-                        } else {
-                            $("#searchResult").html("出现错误：" + data.msg);
+                    if (account == 1) {
+                        verify = "phone";
+                    } else {
+                        verify = "email";
+                    }
+                    $('.account').attr("lay-verify", verify);
+                });
+
+                step.render({
+                    elem: '#stepForm',
+                    filter: 'stepForm',
+                    width: '100%', //设置容器宽度
+                    stepWidth: '750px',
+                    height: '500px',
+                    stepItems: [{
+                        title: '[[#{forget.step_one}]]'
+                    }, {
+                        title: '[[#{forget.getcode}]]'
+                    }, {
+                        title: '[[#{forget.step_two}]]'
+                    }]
+                });
+
+                form.on('submit(formStep)', function (data) {
+                    if ($('.password_1').val() == $('.password_2').val()) {
+                        //赋值给获取验证码的账号
+                        $('.account_two').text($('.account').val());
+                        step.next('#stepForm');
+                    } else {
+                        layer.msg("[[#{forget.msg_pass}]]");
+                    }
+                    return false;
+                });
+
+                form.on('submit(formStep2)', function (data) {
+                    if($("input[name='code']").val()==""){
+                        layer.msg('[[#{forget.codeMsg}]]')
+                        return false;
+                    }
+                    ajax({code:$("input[name='code']").val()},"/ifCode",function (rest) {
+                        console.log(rest);
+                        if(rest==1){
+                            ajax({password:$("input[name='password']").val(),username:$('.account').val()},"/updatePassword",function () {
+                                if(rest==1){
+                                    //分布表单下一步
+                                    step.next('#stepForm');
+                                }else{
+                                    layer.msg()
+                                }
+                            })
+                        }else{
+                            layer.msg('aaa')
                         }
-                    },
-                    error: function (msg) {
-                        alert("发生错误：" + msg.status);
+                    });
+                    return false;
+                });
+
+                $('.pre').click(function () {
+                    //分布表单上一步
+                    step.pre('#stepForm');
+                });
+
+                //获取验证码，一分钟内只能点击一次
+                $('.getCode').on('click', function () {
+                    if (!btn_getCode) {
+                        btn_getCode = true;
+                        getcode($(this));
+                        ajax({user:$('.account_two').text()},"/getCode");
+                    } else {
+                        return false;
                     }
                 })
+
+                $('.next').click(function () {
+                    step.pre('#stepForm');
+                });
+
+                //前往登录
+                $('.land').click(function () {
+                    window.location = 'login';
+                });
+
+                //点击事件
+                var getcode = function (date) {
+                    //获取点击的对象
+                    var obj = date;
+                    //获取按钮的文本
+                    var text = obj.text();
+                    //给对象添加禁止点击
+                    obj.addClass("layui-disabled");
+                    var time = 59;
+                    //定义一个每秒执行一次的事件
+                    var timer = setInterval(function () {
+                        var temp = time--;
+                        //更改按钮的值
+                        obj.text(text + ' (' + temp + "S)");
+                        //判断是否已经结束了禁止点击的时间
+                        if (temp <= 0) {
+                            btn_getCode = false;
+                            //移除禁止点击的效果
+                            obj.removeClass("layui-disabled");
+                            //改回按钮的值
+                            obj.text(text);
+                            //清除每秒执行的一次的事件
+                            clearInterval(timer);
+                            return;
+                        }
+                    }, 1000);
+                }
+                //发送异步请求，获取验证码
+                var ajax = function (user,url,success) {
+                    ajax_data.data = user;
+                    ajax_data.success=success;
+                    ajax_data.url = url;
+                    MyMethod.ajax();
+                }
             }
-        })
+        )
         // ]]>
     </script>
 </div>
