--- a/src/main/webapp/pages/subsidiary/register.html
+++ b/src/main/webapp/pages/subsidiary/register.html
@@ -70,15 +70,17 @@
                                     <div class="layui-form-item">
                                         <label class="layui-form-label" th:text="#{forget.usernam}"></label>
                                         <div class="layui-input-block">
-                                            <input type="text" name="name" th:placeholder="#{forget.fillname}" class="layui-input"
-                                                    autocomplete="new-password"/>
+                                            <input type="text" name="name" th:placeholder="#{forget.fillname}"
+                                                   class="layui-input"
+                                                   autocomplete="new-password"/>
                                         </div>
                                     </div>
                                     <div class="layui-form-item">
                                         <label class="layui-form-label" th:text="#{forget.code}"></label>
                                         <div class="layui-input-block">
-                                            <input type="text" name="code" th:placeholder="#{login.code}" class="layui-input"
-                                                   lay-verify="number" required="required" autocomplete="new-password"/>
+                                            <input type="text" name="code" th:placeholder="#{login.code}"
+                                                   class="layui-input"
+                                                   required="required" autocomplete="new-password"/>
                                         </div>
                                     </div>
                                     <div class="layui-form-item">
@@ -87,7 +89,7 @@
                                                     th:text="#{forget.back}"></button>
                                             <button type="button" class="layui-btn layui-btn-normal getCode"
                                                     th:text="#{forget.getcode}"></button>
-                                            <button class="layui-btn" lay-submit lay-filter="formStep2"
+                                            <button class="layui-btn" lay-submit lay-filter="formStep3"
                                                     th:text="#{login.registered}"></button>
                                         </div>
                                     </div>
