--- a/src/main/webapp/pages/error/500.html
+++ b/src/main/webapp/pages/error/500.html
@@ -11,6 +11,15 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" th:href="@{/styles/lib/layui-v2.5.5/css/layui.css}" media="all">
     <style>
+        *{
+            moz-user-select: -moz-none;
+            -moz-user-select: none;
+            -o-user-select:none;
+            -khtml-user-select:none;
+            -webkit-user-select:none;
+            -ms-user-select:none;
+            user-select:none;
+        }
         .error .clip .shadow {
             height: 180px;
         }
