--- a/src/main/webapp/pages/subsidiary/menu.html
+++ b/src/main/webapp/pages/subsidiary/menu.html
@@ -16,88 +16,29 @@
 <body>
 <div class="layuimini-container">
     <div class="layuimini-main">
-        <blockquote class="layui-elem-quote">
-            Layui的树形表格treeTable，支持异步加载(懒加载)、复选框联动、折叠状态记忆。<br>
-            <a href="https://gitee.com/whvse/treetable-lay" target="_blank" class="layui-btn layui-btn-danger">treetable-lay</a>
-        </blockquote>
         <div>
-            <div class="layui-btn-group">
+            <div class="layui-btn-group" style="width: 100%;">
                 <button class="layui-btn" id="btn-expand">全部展开</button>
                 <button class="layui-btn layui-btn-normal" id="btn-fold">全部折叠</button>
+                <button class="layui-btn layui-btn-danger" style="float: right" id="btn-add">添加菜单</button>
             </div>
             <table id="munu-table" class="layui-table" lay-filter="munu-table"></table>
         </div>
     </div>
 </div>
+<!-- 状态列 -->
+<script type="text/html" id="status">
+    <input type="checkbox" name="status" lay-skin="switch" lay-text="禁用|激活" lay-event="status" checked>
+</script>
+
 <!-- 操作列 -->
 <script type="text/html" id="auth-state">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 
 <script th:src="@{/styles/lib/layui-v2.5.5/layui.js}" charset="utf-8"></script>
 <script th:src="@{/styles/js/lay-config.js?v=1.0.4}" charset="utf-8"></script>
-<!--<script>-->
-<!--layui.use(['table', 'treetable'], function () {-->
-<!--var $ = layui.jquery;-->
-<!--var table = layui.table;-->
-<!--var treetable = layui.treetable;-->
-
-<!--// 渲染表格-->
-<!--layer.load(2);-->
-<!--treetable.render({-->
-<!--treeColIndex: 1,-->
-<!--treeSpid: -1,-->
-<!--treeIdName: 'authorityId',-->
-<!--treePidName: 'parentId',-->
-<!--elem: '#munu-table',-->
-<!--url: '../api/menus.json',-->
-<!--page: false,-->
-<!--cols: [[-->
-<!--{type: 'numbers'},-->
-<!--{field: 'authorityName', minWidth: 200, title: '权限名称'},-->
-<!--{field: 'authority', title: '权限标识'},-->
-<!--{field: 'menuUrl', title: '菜单url'},-->
-<!--{field: 'orderNumber', width: 80, align: 'center', title: '排序号'},-->
-<!--{-->
-<!--field: 'isMenu', width: 80, align: 'center', templet: function (d) {-->
-<!--if (d.isMenu == 1) {-->
-<!--return '<span class="layui-badge layui-bg-gray">按钮</span>';-->
-<!--}-->
-<!--if (d.parentId == -1) {-->
-<!--return '<span class="layui-badge layui-bg-blue">目录</span>';-->
-<!--} else {-->
-<!--return '<span class="layui-badge-rim">菜单</span>';-->
-<!--}-->
-<!--}, title: '类型'-->
-<!--},-->
-<!--{templet: '#auth-state', width: 120, align: 'center', title: '操作'}-->
-<!--]],-->
-<!--done: function () {-->
-<!--layer.closeAll('loading');-->
-<!--}-->
-<!--});-->
-
-<!--$('#btn-expand').click(function () {-->
-<!--treetable.expandAll('#munu-table');-->
-<!--});-->
-
-<!--$('#btn-fold').click(function () {-->
-<!--treetable.foldAll('#munu-table');-->
-<!--});-->
-
-<!--//监听工具条-->
-<!--table.on('tool(munu-table)', function (obj) {-->
-<!--var data = obj.data;-->
-<!--var layEvent = obj.event;-->
-
-<!--if (layEvent === 'del') {-->
-<!--layer.msg('删除' + data.id);-->
-<!--} else if (layEvent === 'edit') {-->
-<!--layer.msg('修改' + data.id);-->
-<!--}-->
-<!--});-->
-<!--});-->
-<!--</script>-->
+<script th:src="@{/styles/js/page/menu.js}" charset="utf-8"></script>
 </body>
 </html>
