--- a/src/main/webapp/pages/subsidiary/forget.html
+++ b/src/main/webapp/pages/subsidiary/forget.html
@@ -130,7 +130,7 @@
     <script th:src="@{/styles/js/lay-config.js?v=1.0.4}" charset="utf-8"></script>
     <script th:src="@{/styles/lib/jquery-3.4.1/jquery-3.4.1.min.js}" charset="utf-8"></script>
     <!--导入自定义的一些公共方法-->
-    <script th:src="@{/styles/js/my_function.js}"></script>
+    <script th:src="@{/accest/my_function.js}" charset="utf-8"></script>
     <script type="text/javascript">
         //<![CDATA[
         layui.use(['form', 'step'], function () {
