--- a/src/main/webapp/pages/subsidiary/login.html
+++ b/src/main/webapp/pages/subsidiary/login.html
@@ -353,7 +353,7 @@
 <script th:src="@{/styles/lib/layui-v2.5.5/layui.js}" charset="utf-8"></script>
 <script th:src="@{/styles/lib/jquery-3.4.1/jquery-3.4.1.min.js}" charset="utf-8"></script>
 <!--导入自定义的一些公共方法-->
-<script th:src="@{/styles/js/my_function.js}"></script>
+<script th:src="@{/accest/my_function.js}"></script>
 <script type="text/javascript">
     //<![CDATA[
     layui.use(['form', 'jquery'], function () {
@@ -361,7 +361,7 @@
             form = layui.form,
             layer = layui.layer;
         //获取页面中的错误信息
-        var msg = "[[${msg}]]"
+        var msg = "[[${msg}]]";
         if (msg != "") {
             layer.msg(msg, {icon: 2, time: 3 * 1000, shift: 6});
         }
@@ -425,7 +425,7 @@
                 if (rest.code == 200) {
                     //存储token
                     localStorage.token = rest.data;
-                    MyMethod.setCookie("token", rest.data,10);
+                    MyMethod.setCookie("token", rest.data, 10);
                     MyMethod.language('/');
                 } else {
                     layer.msg(rest.message, {icon: 2, time: 3 * 1000, shift: 6});
