角色权限管理初步形成

--- a/src/main/webapp/pages/error/404.html
+++ b/src/main/webapp/pages/error/404.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" th:href="@{/styles/lib/layui-v2.5.5/css/layui.css}" media="all">
-    <link rel="stylesheet" th:href="@{/accest/error/error.css}">
+    <link rel="stylesheet" th:href="@{/styles/common/error/error.css}">
 </head>
 <body>
 <div class="error">
@@ -41,7 +41,7 @@
     </div>
 </div>
 <script th:src="@{/styles/lib/layui-v2.5.5/layui.js}" charset="utf-8"></script>
-<script th:src="@{/accest/error/error.js}" charset="utf-8"></script>
+<script th:src="@{/styles/common/error/error.js}" charset="utf-8"></script>
 <script type="text/javascript">
     getNum(4, 0, 4);
 </script>
