--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -144,7 +144,7 @@
 <script th:src="@{/styles/js/lay-config.js?v=2.0.0}" charset="utf-8"></script>
 <script th:src="@{/styles/lib/jquery-3.4.1/jquery-3.4.1.min.js}" charset="utf-8"></script>
 <!--引入自定以的方法-->
-<script th:src="@{/accest/my_function.js}" charset="utf-8"></script>
+<script th:src="@{/styles/common/my_function.js}"></script>
 
 <script>
     layui.use(['jquery', 'layer', 'miniAdmin', 'miniTongji'], function () {
@@ -178,7 +178,6 @@
 
         //获取用户信息
         MyMethod.getUser();
-        console.log(localStorage.user)
         $('#user_name').text(localStorage.user == undefined ? "临时用户" : JSON.parse(localStorage.user).name);
 
         //语言切换事件
