角色权限管理初步形成

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -178,7 +178,8 @@
 
         //获取用户信息
         MyMethod.getUser();
-        $('#user_name').text(localStorage.user == undefined ? "临时用户" : JSON.parse(localStorage.user).name);
+        // $('#user_name').text(localStorage.user == undefined ? "临时用户" : JSON.parse(localStorage.user).name);
+        $('#user_name').text(localStorage.user == "null" ? "临时用户" : JSON.parse(localStorage.user).name);
 
         //语言切换事件
         $('.language dd').on('click', function () {
