--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -114,7 +114,8 @@
     <div class="layui-body">
 
         <div class="layuimini-tab layui-tab-rollTool layui-tab" lay-filter="layuiminiTab" lay-allowclose="true">
-            <ul class="layui-tab-title">
+            <ul class="layui-tab-title"
+                style="-webkit-user-select: none;-moz-user-select: none;-o-user-select: none;user-select: none;">
                 <li class="layui-this" id="layuiminiHomeTabId" lay-id=""></li>
             </ul>
             <div class="layui-tab-control">
@@ -155,7 +156,13 @@
 
         //获取用户信息
         MyMethod.getUser();
-        var user = localStorage.user == "null" ? MyMethod.language('/logout') : JSON.parse(localStorage.user);
+        var user;
+        if (localStorage.user == "null") {
+            sessionStorage.msg = "token验证失败";
+            MyMethod.language('/logout')
+        } else {
+            user = JSON.parse(localStorage.user)
+        }
         // $('#user_name').text(localStorage.user == undefined ? "临时用户" : JSON.parse(localStorage.user).name);
         $('#user_name').text(user.name);
 
@@ -166,7 +173,7 @@
             bgColorDefault: false,      // 主题默认配置
             multiModule: true,          // 是否开启多模块
             menuChildOpen: false,       // 是否默认展开菜单
-            loadingTime: 0,             // 初始化加载时间
+            loadingTime: -10,             // 初始化加载时间
             pageAnim: true,             // iframe窗口动画
             maxTabNum: 20,              // 最大的tab打开数量
         };
@@ -199,7 +206,7 @@
         $('.login-out').on("click", function () {
             layer.msg('退出登录成功', {icon: 1, time: 3 * 1000, shift: 6}, function () {
                 //清空用户在浏览器中的缓存
-                MyMethod.removeCookie("token");
+                // MyMethod.removeCookie("token");
                 localStorage.removeItem("token");
                 localStorage.removeItem("user");
                 MyMethod.language('/logout')
