--- a/src/main/webapp/pages/subsidiary/welcome.html
+++ b/src/main/webapp/pages/subsidiary/welcome.html
@@ -130,7 +130,7 @@
                                             </a>
                                         </div>
                                         <div class="layui-col-xs3 layuimini-qiuck-module">
-                                            <a href="javascript:;" layuimini-content-href="/login"
+                                            <a href="javascript:;" layuimini-content-href="/loging"
                                                data-title="404页面" data-icon="fa fa-hourglass-end">
                                                 <i class="fa fa-hourglass-end"></i>
                                                 <cite>404页面</cite>
